# ray_tracing-minifb

./: CMakeLists.txt  README.md  main.c
include/: somehelper.h
src/: main.c  somehelper.c
